--- a/dev/scss/layout/_header.scss
+++ b/dev/scss/layout/_header.scss
@@ -1,3 +1,11 @@
 /* =============
     Header
 ============= */
+#header {
+    background-image: url('../img/header/sun.jpg');
+    background-size: cover
+    background-repeat: no-repeat
+    background-position: center;
+    height: 684px;
+}
+  
