--- a/dev/scss/layout/_header.scss
+++ b/dev/scss/layout/_header.scss
@@ -2,10 +2,15 @@
     Header
 ============= */
 #header {
+    display: grid;    
     background-image: url('../img/header/sun.jpg');
-    background-size: cover
-    background-repeat: no-repeat
+    background-size: cover;
     background-position: center;
+    background-repeat: no-repeat;
     height: 684px;
+
+    @include md {
+        height: 670px;
+    }
 }
   
