--- a/dev/scss/sections/_section-2.scss
+++ b/dev/scss/sections/_section-2.scss
@@ -1,9 +1,57 @@
 /* =============
     Section 2
 ============= */
+
 #section-2{
-    .grid-content{
-        
+    padding-bottom: 32 px;
+
+    @include xl{
+        display: grid;
+        grid-template-columns: auto 1200px auto;
+        grid-template-areas: ". section-2-container .";
     }
 
+    #section-2-container{
+
+        @include md{
+            display: grid;
+            grid-template-columns: 40% auto;
+            grid-template-areas: "section-2-image section-2-content";
+            padding: 50px 0;
+        }
+
+        @include xl{
+            grid-area: section-2-container;
+    }
+
+            section{
+                margin: 60px 0;
+                @include md{
+                    margin: 0;
+                }
+    
+                #section-2-content{
+                padding: 0 15px;
+                @include md{
+                    grid-area: section-2-content;
+                }
+            }
+        }
+
+        aside{
+            background-image: url("../img/section-2/boats.jpg");
+            background-size: cover;
+            height: 480px;
+            @include md{
+                grid-area: section-2-image;
+                height: 480px;
+            }
+            @include lg{
+                height: 422px;
+            }
+            @include xl{
+                height: 737px;
+            }
+        }
+    }
 }
