--- a/dev/scss/sections/_section-4.scss
+++ b/dev/scss/sections/_section-4.scss
@@ -1,9 +1,30 @@
 /* =============
     Section 4
 ============= */
-#section-4{
-    .grid-content{
-        
-    }
 
+#section-4{
+   display: grid;
+   grid-template-columns: 15px auto 15px;
+   grid-template-areas: ". section-4 .";
+   padding: 43px 0px;
+   text-align: center;
+   color: $black;
+
+   @include md{
+       grid-template-columns: auto 70% auto;
+   }
+
+   @include xl{
+       grid-template-columns: auto 650px auto;
+   }
+
+   >div{
+       grid-area: section-4;
+
+       hr{
+           border: none;
+           height: 3px;
+           background-color: $black;
+       }
+   }
 }
