--- a/dev/scss/sections/_section-6.scss
+++ b/dev/scss/sections/_section-6.scss
@@ -1,9 +1,45 @@
 /* =============
-    Section 4
+    Section 6
 ============= */
-#section-4{
-    .grid-content{
-        
+
+#section-6{
+    padding: 41px 0 36px;
+
+    @include xl{
+        display: grid;
+        grid-template-columns: auto 1200px auto;
+        grid-template-areas: ". section-6 .";
+    }
+
+    >div{
+
+        @include xl{
+            display: grid;
+            grid-template-columns: 35% auto;
+            grid-area: section-6;
+        }
+
+        aside{
+            text-align: center;
+            margin-bottom: 34px;
+            @include md{
+                margin-bottom: 46px;
+            }   
+        }
+    
+        section{
+            display: grid;
+            grid-template-columns: 15px auto 15px;
+            grid-template-areas: ". section-6 .";
+            text-align: justify;
+
+            @include md{
+                grid-template-columns: auto 70% auto;
+            }
+            >div{
+                grid-area: section-6;
+            }
+        }
     }
 
 }
