--- a/dev/scss/sections/_section-6.scss
+++ b/dev/scss/sections/_section-6.scss
@@ -16,7 +16,7 @@
         @include xl{
             display: grid;
             grid-template-columns: 35% auto;
-            grid-area: section-6;
+            grid-area: section-6-div;
         }
 
         aside{
