--- a/dev/scss/base/_typography.scss
+++ b/dev/scss/base/_typography.scss
@@ -2,7 +2,9 @@
     Typography
 ============= */
 body{
-    font-family: 'Montserrat', sans-serif;
+    //font-family: 'Tamil Sangam MN', sans-serif;
+    font-family: 'Sathu', sans-serif;
+    color: $black;
 }
 
 h1,h2,h3,h4{
