--- a/dev/scss/base/_typography.scss
+++ b/dev/scss/base/_typography.scss
@@ -2,8 +2,8 @@
     Typography
 ============= */
 body{
-    //font-family: 'Tamil Sangam MN', sans-serif;
-    font-family: 'Sathu', sans-serif;
+    //font-family: 'Balsamiq Sans', sans-serif;
+    font-family: 'Ubuntu', sans-serif;
     color: $black;
 }
 
