--- a/dev/scss/helpers/_variables.scss
+++ b/dev/scss/helpers/_variables.scss
@@ -19,4 +19,5 @@ $screen-xl-min: 1200px;
 $white: #fff;
 $black: #000;
 $blue-green: #409694;
-$dark-grey: #181818
+$dark-grey: #181818;
+$light-blue: #7CDFD9;
