--- a/dev/scss/layout/_header.scss
+++ b/dev/scss/layout/_header.scss
@@ -1,3 +1,51 @@
 /* =============
     Header
 ============= */
+header {
+    background-color: $blue-green;
+    left: 0;
+    position: fixed;
+    top: 0;
+    width: 100%;
+
+    >div{
+        display: grid;
+        grid-template-areas: "logo burger"
+                            "nav nav";
+        grid-template-columns: 80% auto;
+
+        section,
+        nav{
+            padding: 20px;
+        }
+
+        #logo-container {
+            grid-area: logo;
+            
+        }
+        #burger-container {
+            align-items: center;
+            display: flex;
+            grid-area: burger;
+            justify-content: flex-end;
+
+            @include lg {
+                display: none !important;
+            }
+            i {
+                cursor: pointer;
+            }
+        }
+
+        #nav-container {
+            background-color: $dark-grey;
+            grid-area: nav;
+            display: none;
+            padding: 20px;
+
+            @include lg {
+                display: block !important;
+            }
+        }
+    }
+}
