--- a/dev/scss/styles.css
+++ b/dev/scss/styles.css
@@ -383,7 +383,7 @@ ul li {
     Typography
 ============= */
 body {
-  font-family: "Sathu", sans-serif;
+  font-family: "Ubuntu", sans-serif;
   color: #000;
 }
 
@@ -425,9 +425,84 @@ textarea {
 /* =============
     Navigation
 ============= */
+#nav-container ul {
+  height: 100%;
+  text-align: right;
+}
+@media (min-width: 992px) {
+  #nav-container ul {
+    display: flex;
+    justify-content: flex-end;
+  }
+}
+#nav-container ul li {
+  margin-bottom: 20px;
+}
+@media (min-width: 992px) {
+  #nav-container ul li {
+    align-items: center;
+    display: flex;
+    margin: 0 30px 0 0;
+  }
+}
+#nav-container ul li a:link,
+#nav-container ul li a:visited {
+  color: #7CDFD9;
+  text-decoration: none;
+}
+#nav-container ul li a:hover,
+#nav-container ul li a:active {
+  color: #000;
+}
+
 /* =============
     Header
 ============= */
+header {
+  background-color: #409694;
+  left: 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+header > div {
+  display: grid;
+  grid-template-areas: "logo burger" "nav nav";
+  grid-template-columns: 80% auto;
+}
+header > div section,
+header > div nav {
+  padding: 20px;
+}
+header > div #logo-container {
+  grid-area: logo;
+}
+header > div #burger-container {
+  align-items: center;
+  display: flex;
+  grid-area: burger;
+  justify-content: flex-end;
+}
+@media (min-width: 992px) {
+  header > div #burger-container {
+    display: none !important;
+  }
+}
+header > div #burger-container i {
+  cursor: pointer;
+}
+header > div #nav-container {
+  background-color: #181818;
+  grid-area: nav;
+  display: none;
+  padding: 20px;
+}
+@media (min-width: 992px) {
+  header > div #nav-container {
+    display: block !important;
+  }
+}
+
 /* =============
     Footer
 ============= */
